--- a/index.html
+++ b/index.html
@@ -120,22 +120,45 @@
             <div class="lesson-icon">
               <h3 class = "btn signup">JEE.</h3>
             </div>
-            <p class="text-contents">Two Year Programme <br>Fee 50,000.</p>
-            <p class="text-contents">One Year Programme <br>Fee 30,000.</p>
+            <h3 class="text-contents">Two Year Programme</p>
+            <h3 class = "tect-contents">Fee <strike>50,000.</strike></h3>
+            <p class = "text-contents discount-para">20% discount till 5 August 2020</p>
+            <h3 class = "text-contents">Fee after discount</h3>
+            <h3 class = "discount-fee">Fee 40,000.</h3>
+            <h3 class="text-contents">One Year Programme</p>
+            <h3 class = "tect-contents">Fee <strike>30,000.</strike></h3>
+            <p class = "text-contents discount-para">15% discount till 5 August 2020</p>
+            <h3 class = "text-contents">Fee after discount</h3>
+            <h3 class = "discount-fee">Fee 25,500.</h3>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
               <h3 class = "btn facebook">NEET</h3>
             </div>
-            <p class="text-contents">Two Year Programme<br>Fee 50,000.</p>
-            <p class="text-contents">One Year Programme<br>Fee 30,000.</p>
+            <h3 class="text-contents">Two Year Programme</p>
+            <h3 class = "tect-contents">Fee <strike>50,000.</strike></h3>
+            <p class = "text-contents discount-para">20% discount till 5 August 2020</p>
+            <h3 class = "text-contents">Fee after discount</h3>
+            <h3 class = "discount-fee">Fee 40,000.</h3>
+            <h3 class="text-contents">One Year Programme</p>
+            <h3 class = "tect-contents">Fee <strike>30,000.</strike></h3>
+            <p class = "text-contents discount-para">15% discount till 5 August 2020</p>
+            <h3 class = "text-contents">Fee after discount</h3>
+            <h3 class = "discount-fee">Fee 25,500.</h3>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
               <h3 class = "btn twitter">MHCET + BOARD</h3>
             </div>
-            <p class="text-contents">Two Year Programme<br>Fee 40,000.</p>
-            <p class="text-contents">One Year Programme<br>Fee 25,000.</p>
+            <h3 class="text-contents">Two Year Programme<br>Fee 40,000.</h3>
+            <h3 class="text-contents">One Year Programme<br>Fee 25,000.</h3>
+          </div>
+          <div class="lesson">
+            <div class="lesson-icon">
+              <h3 class = "btn signup">CRASH COURSE</h3>
+            </div>
+            <h3 class="text-contents">Comming Soon!!.</h3>
+            
           </div>
           
           <div class="clear"></div>
